Change default value of has_image_contents

The default value of has_image_contents(in context_menu_params.cc, WebContextMenuData.h) is true by default.
These values mean there is an image content for the long pressed node.

Changed default value to false to make it less confusing for
elements(Link, video) other than image, canvas.
This value is being set properly incase of canvas and image elements
in ContextMenuClientImpl::ShowContextMenu and it is being used only
incase of media_type kMediaTypeImage in render_view_context_menu.cc.
So this change will not cause any difference to the existing code flow.

BUG=707789

Review-Url: https://codereview.chromium.org/2803233002
Cr-Commit-Position: refs/heads/master@{#464717}

Former-commit-id: d68c1beaad7929dddc6e6e1278dd03fedcd348eb